<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:padding="10dp">

    <EditText
        android:id="@+id/updateIdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/green"
        android:hint="@string/input_id" />

    <EditText
        android:id="@+id/updateNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/green"
        android:hint="@string/input_name" />

    <EditText
        android:id="@+id/updateWeightET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/green"
        android:hint="@string/input_weight" />

    <EditText
        android:id="@+id/updatePriceET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/green"
        android:hint="@string/input_price" />

</LinearLayout>