<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <include layout="@layout/tabel_panel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350sp"
        android:layout_marginTop="20sp">

        <ListView
            android:id="@+id/listViewLV"
            android:layout_width="wrap_content"
            android:layout_height="350sp"
            android:layout_marginHorizontal="8dp"
            tools:listitem="@layout/list_item"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40sp"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:padding="6dp">

        <Button
            android:id="@+id/saveBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/save_btn"/>

        <Button
            android:id="@+id/updateBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/update_btn"/>

        <Button
            android:id="@+id/deleteBTN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:text="@string/delete_btn"/>

    </LinearLayout>

</LinearLayout>